@@ -61,21 +61,20 @@ HostInfo::HostInfo(Results &results, QObject *parent) : QObject(parent), _result
 #else
     _bbrasDetectProcCmd = "traceroute -m 2 -q 1 8.8.8.8";
     _bbrasLine = "2  ";
-#endif // Q_WS_WIN
-
 #ifdef Q_WS_MAC
     _osDetectProc.start("sw_vers -productVersion", QIODevice::ReadOnly);
 #else
 #ifdef Q_OS_LINUX
     _osDetectProc.start("uname -o", QIODevice::ReadOnly);
 #else
-    _osDetectProc.start("uname -s", QIODevice::ReadOnly);
-#endif // Q_OS_LINUX
-#endif // Q_WS_MAC
-
 #ifdef Q_OS_OS2
     _results._hostOS = "IBM OS/2";
+#else
+    _osDetectProc.start("uname -s", QIODevice::ReadOnly);
 #endif // W_OS_OS2
+#endif // Q_OS_LINUX
+#endif // Q_WS_MAC
+#endif // Q_WS_WIN
 }
 
 void HostInfo::startDetection()
